
namespace WeaponrySystem.Items
{
    public interface IUsable
    {
        void Use();

        // Add more properties and methods if necessary...
    }
}
