using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace WeaponrySystem
{
    public abstract class RangedWeapon : Weapon
    {
        public virtual void Reload()
        {

        }
    }
}
